idf_component_register(SRCS "blink_example_main.c" \
    "freertos_basic.c" \
    "freertos_intermediate.c" \
    "freertos_advanced.c" \
    "freertos_mutex.c" \
    "freertos_recursive_mutex.c" \
    "freertos_semaphore.c" \
    "freertos_queue_set.c" \
    "freertos_stream_buffer.c" \
    "freertos_message_buffer.c" \
    "freertos_task_notify.c" \
    "freertos_priority_inheritance.c" \
    "freertos_dynamic_task.c" \
    "freertos_idle_hook.c"
)
